other-vpol/block-cluster-admin-from-ns/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testnamespace
