other-vpol/block-cluster-admin-from-ns/.chainsaw-test/other-cm.yaml
apiVersion: v1
kind: Secret
metadata:
  name: goodcm01
  namespace: testnamespace
stringData:
  foo: other
